--- a/html.html
+++ b/html.html
@@ -7,6 +7,9 @@
   
   <title>Curso de html5</title>
   <style>
+  body{
+    margin: 0px;
+  }
   .info{
     text-align:center;
     font-size: 20px;
