--- a/python.html
+++ b/python.html
@@ -68,6 +68,9 @@
   margin-top: 20px;
   text-align: center;
 }
+  #mk_buch{
+    background: none;
+    color: blue;
   .tema{
     margin-top: 40px;
   }
