--- a/instalacao.html
+++ b/instalacao.html
@@ -7,12 +7,17 @@
   
   <title>Curso de html5</title>
   <style>
+  body{
+    margin: 0px;
+  }
   .info{
     text-align:center;
     font-size: 20px;
     margin-top: 50px;
   }
-  
+  h3,h2,h4,p{
+    margin: 10px;
+  }
   #cabeca{
     background: #126787;
   }
@@ -33,8 +38,10 @@
   text-align: center;
 }
   .imgpy{
-    width: 97%;
-    height: 350px;
+    width: 90%;
+    height: 500px;
+    margin-left: 17px;
+    border: 3px solid #123456;
   }
   </style>
 </head>
@@ -58,7 +65,7 @@
       
     </p>
     <h3>Pelo Computador</h3>
-    <p>Accesse este link da python.org <b><i>https://www.python.org/downloads/</i></b></p>
+    <p>Accesse este link da python.org <a href="https://www.python.org/downloads/"><b><i>https://www.python.org/downloads/</i></b></a></p>
   </div>
   
   <div>
