--- a/kivy.html
+++ b/kivy.html
@@ -7,6 +7,9 @@
   
   <title>Curso de Kivy</title>
   <style>
+  body{
+    margin: 0px;
+  }
   .info{
     text-align:center;
     font-size: 20px;
