--- a/instalacao.html
+++ b/instalacao.html
@@ -38,8 +38,8 @@
   text-align: center;
 }
   .imgpy{
-    width: 90%;
-    height: 500px;
+    width: 300px;
+    height: 550px;
     margin-left: 17px;
     border: 3px solid #123456;
   }
