--- a/service.html
+++ b/service.html
@@ -163,11 +163,11 @@
     </h1>
   <form id="form1" action="https://formsubmit.co/scaybuch@gmail.com" method="POST">
     <p>Nome: </p>
-    <input type="text" name="name" placeholder="Seu Nome" required="">
+    <input type="name" name="name" placeholder="Seu Nome" required="">
     <p>Email: </p>
     <input type="email" name="email" placeholder="Endereco Email" required>
     <p>Oque Deseja: </p>
-    <textarea type="email" name="email" >Ola! Eu sou:</textarea><br>
+    <textarea type="text" name="text" requered>Ola! Eu sou:</textarea><br>
     
     <button type="submit">Enviar</button>
     
