--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   }
   #Mdiv{
     background: #126787;
+    background-image: url("bgtopbar.jpg");
     height: 450px;
     text-align: center;
   }
