--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   #Mdiv{
     background: #126787;
     background-image: url("bgtopbar.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 450px;
     text-align: center;
   }
