--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   }
   
   .cabecalho{
-    width: 100%;
-    height: 80px;
+    width: 60%;
+    height: 100px;
     background: blue;
     display: block-inline;
     border-radius: 12px;
@@ -122,7 +122,7 @@
   }
   .box_link{
     color: silver;
-    width: 50%;
+    
   }
   .service{
     font-size: 20px;
@@ -139,7 +139,7 @@
 <body>
   <div id="Mdiv">
     <div class="boxL">
-    <img src="log1.png" alt="imagem de perfil" id="img_pf"/>
+    <img src="bs_logo.png" alt="imagem de perfil" id="img_pf"/>
     </div>
     
   <h1 class="boxL">
